--- a/studio/public/scripts/views/explore.html
+++ b/studio/public/scripts/views/explore.html
@@ -126,7 +126,7 @@
 
         <div class="explore-content ng-class:{active: (activeIndex==1)}">
 
-            <features-grid ng-if="!loading" features="features" column-width="200" row-header-width="200" on-page="onPage"></features-grid>
+            <features-grid ng-if="!loading" features="features" column-width="200" row-header-width="200" on-page="onPage" show-data="true"></features-grid>
 
         </div>
 
