--- a/studio/public/scripts/components/browser/browser.css
+++ b/studio/public/scripts/components/browser/browser.css
@@ -17,19 +17,11 @@
 .browser-definition { padding: 8px; background-color: #f5f5f5; height: 100%; }
 .browser-definition button { margin-top: 6px; }
 
-.block-parameter { margin-top: 10px; height: 65px; }
-.block-parameter label { color: #989898; font-weight: normal; margin-bottom: 2px; }
-
-/*
- * Ghost
- */
-
 #ghost { position: absolute; background-color: #fff; z-index: 1101; opacity: 0.6; border-radius: 10px; }
 
-.block-config-container {
-    width: 100%;
-    padding: 10px;
-}
+.block-config-container { width: 100%; padding: 25px; }
+.block-config-changed { padding: 0px; }
+.block-config-changed-btn { margin-right: 4px; }
 
 .editable-query-btn { width: 100%; }
 
