--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -241,6 +241,12 @@ button.diagram-evaluating { color: #2ca02c; }
 .range-slider-labels { position: absolute; width: 100%; height: 20px; top: 18px; }
 .range-slider-label { font-size: 0.8em; }
 
+/* block data view */
+#block-data-wrapper { height: 100%; width: 100%; margin: 0; padding: 0; }
+#block-data-tabs { display: block; position: relative; float: left; height: 100%; width: 70px; margin: 0; padding: 0; background-color: #e5e5e5; }
+#block-data-container { display: block; position: relative; float: left; height: 100%; width: -webkit-calc(100% - 70px); color: #666; }
+.block-data-content { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #f9f9f9; overflow: hidden; }
+
 /* explore view */
 #explore-wrapper { height: 100%; width: 100%; margin: 0; padding: 0; }
 #explore-tabs { display: block; position: relative; float: left; height: 100%; width: 70px; margin: 0; padding: 0; background-color: #e5e5e5; }
