--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -7,7 +7,7 @@
                 <div class="col-xs-4">
                     <span class="navbar-item">
                         <a ng-click="toggleDiagramNavigation($event)">
-                            <i class="fa fa-folder-open"></i>
+                            <i class="fa fa-bars"></i>
                         </a>
                     </span>
                     <span class="navbar-item">{{diagramViewModel.data.name}}</span>
