--- a/studio/public/stylesheets/diagram.css
+++ b/studio/public/stylesheets/diagram.css
@@ -29,6 +29,7 @@
 .block-header{ stroke: #d8d8d8; stroke-width: 1; }
 
 .block-name{ fill: #686868; font-size: 1.1em; }
+.block-name:hover { cursor: text; }
 .block-definition{ fill: #b8b8b8; }
 
 .block-button-wrapper { cursor: pointer; opacity: 0; -webkit-transition: opacity 0.4s ease-in-out; transition: opacity 0.4s ease-in-out; }
@@ -395,6 +396,8 @@
 }
 
 #drag-selection-rect { fill: #1f77b4; fill-opacity: 0.2; stroke: #1f77b4; stroke-width: 1; stroke-dasharray: 10; }
+
+#rename-input { width: 147px; text-align: center; }
 
 .zoom-controls { position: absolute; bottom: 0; right: 0; }
 .zoom-controls button, .zoom-controls div { display: block; margin: 0 16px 10px 0; width: 40px; }
