--- a/studio/public/scripts/components/grids/exploreGrid.html
+++ b/studio/public/scripts/components/grids/exploreGrid.html
@@ -2,8 +2,8 @@
 
     <div class="grid-column-container" ng-style="{ left: columnHeaderPosition, width: gridWidth }">
         <div class="grid-column-headers" ng-style="{ left: originX, top: padding }">
-            <div class="grid-column-header" ng-repeat="feature in gridFeatures" ng-style="{ width: columnWidth, left: $index * (columnWidth + padding) }">
-                {{feature.column}}
+            <div class="grid-column-header" ng-repeat="feature in features" ng-style="{ width: columnWidth, left: $index * (columnWidth + padding) }">
+                {{feature.name}}
             </div>
         </div>
     </div>
@@ -33,18 +33,14 @@
 
             <div class="grid-content-row" ng-style="{ height: 10 * rowHeight + padding }">
 
-                <div class="grid-content-column" ng-repeat="feature in gridFeatures" ng-style="{ width: columnWidth, left: $index * (columnWidth + padding) }">
+                <div class="grid-content-column" ng-repeat="feature in features" ng-style="{ width: columnWidth, left: $index * (columnWidth + padding) }">
 
-                    <div>{{feature.statistics.count}}</div>
-                    <div>{{feature.statistics.mean}}</div>
-                    <div>{{feature.statistics.std}}</div>
-                    <div>{{feature.statistics.min}}</div>
-                    <div>{{feature.statistics.twentyFive}}</div>
-                    <div>{{feature.statistics.fifty}}</div>
-                    <div>{{feature.statistics.seventyFive}}</div>
-                    <div>{{feature.statistics.max}}</div>
-                    <div>{{feature.statistics.missing}}</div>
-                    <div>{{feature.statistics.dtype}}</div>
+                    <div>{{feature.type}}</div>
+                    <div>{{feature.count}}</div>
+                    <div>{{feature.avg}}</div>
+                    <div>{{feature.stdev}}</div>
+                    <div>{{feature.min}}</div>
+                    <div>{{feature.max}}</div>
 
                 </div>
 
