--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -284,17 +284,19 @@ button.diagram-evaluating { color: #2ca02c; }
 .tab-icon { margin: 0; padding: 0; }
 .tab-text { margin: 0; padding: 0; font-size: 0.8em; }
 
+/* Explore Chart directive */
+.explore-chart-container { position: relative; width: 100%; height: 100%; overflow: hidden; }
+.chart-menu { position: relative; float: left; width: 250px; height: 100%; border-right: 1px solid #e5e5e5; padding: 15px 10px 4px 10px; overflow-x: hidden; overflow-y: scroll; }
+.chart-container { position: relative; float: left; height: 100%; width: -webkit-calc(100% - 250px); background-color: #fff; }
+
+
 #explore-container { display: block; position: relative; float: left; height: 100%; width: -webkit-calc(100% - 70px); color: #666; }
 .explore-content { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #f9f9f9; visibility: hidden; overflow: hidden; }
 .explore-content.active { visibility: visible; }
 
-.chart-content { position: relative; float: left; height: 100%; -webkit-transition: width 0.25s ease-in; }
-#chart-menu-container { width: 25%; border-right: 1px solid #e5e5e5; }
 .chart-fade.ng-hide-remove { transition: 0.5s linear all; opacity: 1; }
 .chart-fade.ng-hide { transition: 0.5s linear all; opacity: 0; }
 .chart-content-expand { width: 100%; -webkit-transition: width 0.75s ease-out; }
-#chart-container { width: 75%; background-color: #fff; }
-#chart-menu { width: 100%; height: -webkit-calc(100% - 30px); margin-top: 30px; padding: 4px 10px 4px 10px; overflow-x: hidden; overflow-y: scroll; }
 .chart-menu-header { width: 100%; height: 30px; color: #666; line-height: 30px; font-size: 1.2em; }
 .chart-menu-header i+i { margin-left: 6px; }
 .chart-menu-header:hover { cursor: default; }
@@ -374,7 +376,7 @@ button.diagram-evaluating { color: #2ca02c; }
 .feature-item-value { padding-right: 15px; }
 
 /* features grid */
-.grid-container { position: relative; width: 100%; height: 100%; background-color: #f9f9f9; overflow: hidden; }
+.grid-container { position: relative; width: 100%; height: 100%; overflow: hidden; }
 .grid-column-container { position: absolute; background: #f9f9f9; top: 0; height: 46px; z-index: 2; }
 .grid-column-headers { position: absolute; }
 .grid-column-header { position: absolute; height: 36px; line-height: 36px; top: 0; background-color: #f5f5f5; border: 1px solid #e9e9e9; vertical-align: middle; padding-left: 10px; }
@@ -429,7 +431,14 @@ button.diagram-evaluating { color: #2ca02c; }
 .checkbox label, .radio label { white-space: nowrap; }
 .form-group>label { color: #666; font-weight: normal; }
 .form-group label+.radio { margin-top: 0; }
-
+.load-data-tab { position: relative; width: 100%; height: -webkit-calc(100% - 30px); background-color: #f9f9f9; }
+.load-data-tabs { display: block; position: relative; width: 100%; height: 30px; background-color: #e7e7e7; padding-right: 20px; overflow: hidden; }
+.load-data-tabs li { list-style: none; display: inline-block; float: right; border: 1px solid #d9d9d9; border-top: 0; margin-left: 2px; white-space: nowrap; cursor: pointer; }
+.load-data-tabs li a { display: inline-block; width: 100px; height: 24px; text-align: center; color: #333; text-decoration: none; padding-top: 2px; border-bottom: 2px solid #e7e7e7; }
+.load-data-tabs li a i { margin-right: 8px; }
+.load-data-tabs li.active, .load-data-tabs li:hover, .load-data-tabs li:hover a { border-bottom-color: #3182bd; }
+.load-data-tabs li.active a { background-color: #fafafa; border-bottom-color: #3182bd; }
+#load-data-toaster { position: absolute; bottom: 0; left: 0; width: 100%; pointer-events: none; z-index: 1; }
 
 /* progress circle */
 .progress-circle { width: 100%; height: 100%; }
