--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -379,7 +379,7 @@ button.diagram-evaluating { color: #2ca02c; }
 .grid-container { position: relative; width: 100%; height: 100%; overflow: hidden; }
 .grid-column-container { position: absolute; background: #f9f9f9; top: 0; height: 46px; z-index: 2; }
 .grid-column-headers { position: absolute; }
-.grid-column-header { position: absolute; height: 36px; line-height: 36px; top: 0; background-color: #f5f5f5; border: 1px solid #e9e9e9; vertical-align: middle; padding-left: 10px; }
+.grid-column-header { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; position: absolute; height: 36px; line-height: 36px; top: 0; background-color: #f5f5f5; border: 1px solid #e9e9e9; vertical-align: middle; padding-left: 10px; }
 .grid-row-container { position: absolute; background: #f9f9f9; left: 0; z-index: 2; }
 .grid-row-headers { position: absolute; }
 .grid-row-feature-count-header { position: absolute; left: 0; background-color: #f5f5f5; padding: 10px; border: 1px solid #e9e9e9; }
